made some changes

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@ testem.log
 Thumbs.db
 
 # Assets
-src/assets/img
-
+src/assets/img/copy.svg
+src/assets/img/copy-hover.svg
+src/assets/img/lizenz-72515274-126498.pdf
