added a animation for the legal notice to pop up

--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,6 @@ Thumbs.db
 # Assets
 src/assets/img/copy.svg
 src/assets/img/copy-hover.svg
+src/assets/img/close.svg
 src/assets/img/lizenz-72515274-126498.pdf
+src/assets/img/lizenz-72515274-4239092.pdf
