made a validation for the form

--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,8 @@ Thumbs.db
 src/assets/img/copy.svg
 src/assets/img/copy-hover.svg
 src/assets/img/close.svg
+src/assets/img/fullfilled.svg
 src/assets/img/lizenz-72515274-126498.pdf
 src/assets/img/lizenz-72515274-4239092.pdf
+src/assets/img/lizenz-72515274-5219192.pdf
+
